# Miscada

./: .gitmodules  README.md  visual.py
.github/workflows/: ci.yml
project/gray-scott-sim/: CMakeLists.txt  gs.cpp  simulation_params.h
project/gray-scott-sim/tests/: test_gs  test_gs.cpp
